# openscenesense-ollama

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-publish.yml  tests.yml
Docs/: analysis_result.schema.json  prompts.md
Examples/: OllamaDemo.py  PlaygroundDemo.py  README.md
openscenesense_ollama/: __init__.py  analyzer.py  cli.py  exceptions.py  frame_selectors.py  models.py  transcriber.py  video_utils.py
tests/: test_analyzer_retry.py  test_frame_selectors.py  test_structured_output.py  test_transcriber_utils.py  test_video_utils.py
